--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="style.css">
-  <title>ToDo List</title>
+  <title>Todo List</title>
 </head>
+
 <body>
+  <main>
+    <div id="todo-container">
+      <h1 id="title">Todo - List</h1>
+      <input type="text" placeholder="Write something todo" id="input-task">
+      <ul id="task-list"></ul>
+    </div>
   <script src="script.js"></script>
 </body>
+
 </html>
