adicionei botões para remover e salvar lista

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <h1 id="title">Todo - List</h1>
       <input type="text" placeholder="Write something todo" id="input-task">
       <ul id="task-list"></ul>
+      <button id="clear-list">Limpar lista</button>
+      <button id="save-list">Salvar lista</button>
     </div>
   <script src="script.js"></script>
 </body>
