adicionei botão para apagar apenas as tarefas concluidas

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
       <h1 id="title">Todo - List</h1>
       <input type="text" placeholder="Write something todo" id="input-task">
       <ul id="task-list"></ul>
-      <button id="clear-list">Limpar lista</button>
-      <button id="save-list">Salvar lista</button>
+      <div id="btns">
+        <button id="clear-done-task">Clear done tasks</button>
+        <button id="clear-list">Clear list</button>
+        <button id="save-list">Save list</button>
+      </div>
     </div>
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
