adicionei numero máximo de tarefas e fiz um footer com minhas informações

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
       </div>
       <ul id="task-list"></ul>
     </div>
-    <script src="script.js"></script>
+  </main>
+  <footer>
+    <p>Desenvolvido por edu-cardoso</p>
+    <a href="https://github.com/edu-cardoso" target="_blank"><img src="assets/github-logo-24.png" alt="github logo"></a>
+  </footer>
+  <script src="script.js"></script>
 </body>
 
 </html>
